Set general capabilities of `EclipseLanguageClient`